2000-03-23  Bruno Haible  <haible@clisp.cons.org>

	* iconv/gconv_int.h (__gconv_transform_ucs2little_internal,
	__gconv_transform_internal_ucs2little): Remove declarations.
	* iconv/gconv_simple.c (__gconv_transform_ucs2_internal,
	__gconv_transform_internal_ucs2): Never	need to bswap_16.
	(__gconv_transform_ucs2reverse_internal,
	__gconv_transform_internal_ucs2reverse): Always need to bswap_16.

2000-03-27  Roland McGrath  <roland@baalperazim.frob.com>

	* include/shlib-compat.h (SHLIB_COMPAT): Make the test handle the
	obsoleting version not being defined at all, in which case the
	result is always true.

	* Makeconfig (preprocess-versions): New canned sequence for running
	cpp on shlib-versions and the like.
	(soversions.i): Use it.
	* Makerules (Versions.all, sysd-versions): Use it to preprocess the
	Versions.def and Versions files.

2000-03-27  Ulrich Drepper  <drepper@redhat.com>

	* stdio-common/tst-obprintf.c (main): Add another check to see
	obstack_printf handling all possible beginnings of the block
	inside an obstack chunk.

	* locale/programs/localedef.c: Use __malloc_initialize_hook to
	install mcheck handler.

	* libio/obprintf.c (_IO_obstack_vprintf): Fix one more memory
	handling problem.

2000-03-27  Roland McGrath  <roland@baalperazim.frob.com>

	* stdio-common/tmpfile.c: Use <shlib-compat.h> macros.

	* include/shlib-compat.h: Conditionalize <abi-versions.h> include
	on [HAVE_ELF && DO_VERSIONING].

2000-03-27  Ulrich Drepper  <drepper@redhat.com>

	* stdio-common/tst-obprintf.c: New file.

2000-03-26  Ulrich Drepper  <drepper@redhat.com>

	* libio/genops.c (_IO_default_xsputn): Little optimization.  Call
	_IO_OVERFLOW directly instead through __overflow.

	* locale/programs/localedef.c (construct_output_path): If path
	contains a / compute the end of the directory name correctly.

	* include/features.h: Undef and document __USE_XOPEN2K.

	* malloc/mcheck.c: Implement pedantic checking of all allocated blocks